--- a/action.yml
+++ b/action.yml
@@ -301,7 +301,11 @@ runs:
             if [ "${{github.event_name}}" == "push" ]; then
               git_previous_commit=${{github.event.before}}
             elif [ "${{github.event_name}}" == "pull_request" ]; then
-              git_previous_commit=${{github.event.pull_request.base.sha}}
+              if [ "${{github.event.action}}" == "synchronize" ]; then
+                git_previous_commit=${{github.event.before}}
+              else
+                git_previous_commit=${{github.event.pull_request.base.sha}}
+              fi
             elif [ "${{github.event_name}}" == "workflow_dispatch" ]; then
               git_previous_commit=$(git rev-parse ${{github.sha}}^)
             else
